force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description
  >Object records to show each of the expenses being tracked for the Expense Tracking object. (Master-Detail)</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>