force-app/main/default/objects/Expense__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <description
  >Name of the person or company that this expense is was paid to, or on behalf of.</description>
    <inlineHelpText
  >Name of the person or company that this expense is was paid to, or on behalf of.</inlineHelpText>
    <label>Beneficiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>