force-app/main/default/objects/Expense__c/fields/Date_Logged__c.field-meta.xml
<CustomField>
    <fullName>Date_Logged__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date the expense was logged to Salesforce.</description>
    <inlineHelpText
  >The date the expense was logged to Salesforce.</inlineHelpText>
    <label>Date Logged</label>
    <required>true</required>
    <type>Date</type>
</CustomField>