force-app/main/default/objects/Expense__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <description>The dollar amount of this expense.</description>
    <inlineHelpText>The dollar amount of this expense.</inlineHelpText>
    <label>Expense Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>