force-app/main/default/objects/Expense__c/fields/Expense_Tracking_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Expense_Tracking_Sheet__c</fullName>
    <description
  >Shows which expense tracking sheet this record rolls up to.</description>
    <inlineHelpText
  >Shows which expense tracking sheet this record rolls up to.</inlineHelpText>
    <label>Expense Tracking Sheet</label>
    <referenceTo>Expense_Tracking__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>